--- a/app/views/baths/show.html.erb
+++ b/app/views/baths/show.html.erb
@@ -1,13 +1,13 @@
 <script src="//maps.google.com/maps/api/js?v=3.23&key=AIzaSyD4MhM4eZ3aFFZMEZr34-YyswW6MjvqU6E"></script>
 <script src="//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js"></script>
 <script src='//cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/infobox/src/infobox_packed.js' type='text/javascript'></script> <!-- only if you need custom infoboxes -->
-</br>
+
 <% if current_user.role == "female" || current_user.role == "male" %>
-<p class="title">These are the bathrooms you have added</p>
-
-    <div class="row" style="font-size:18px">
+    <h1>These are the bathrooms you have added</h1>
+    
+    <div class="row">
         <div class="col-md-6 col md-offset-3">
-
+            
             <% @baths.each do |bath| %>
                     <% if bath.admin_accept == true %>
                     <table class="table">
@@ -22,29 +22,29 @@
 
                         <tr>
                             <th></b><%= link_to "Leave A Review", new_bath_review_path(bath) %></th>
-                            <td><b><%= link_to "View", view_path(bath) %></b></td>
+                            <td><b><%= link_to "View", view_path(bath) %></b></td>                      
                         </tr>
-
-
+                        
+                        
                     </table>
 
-
-
+                    
+                    
                     <% end %>
             <% end %>
-
+            
         </div>
     </div>
-
-
+    
+    
 <% elsif isAdmin? %>
     <h1>These are the bathrooms in the database</h1>
     <% @baths.each do |bath| %>
     <% if bath.admin_accept == true %>
-    <div class="row" style="font-size:18px">
+    <div class="row">
         <div class="col-md-6 col md-offset-3">
-
-
+            
+            
                     <table class="table">
                         <tr>
                             <th><b>Location</b></th>
@@ -54,12 +54,12 @@
                             <th><b>Rating</b></th>
                             <td><b><%= bath.rating %></b></td>
                         </tr>
-
+                        
                         <tr>
                             <th><b>Longitude</b></th>
                             <td><b><%= bath.longitude %></b></td>
                         </tr>
-
+                        
                         <tr>
                             <th><b>Latitude</b></th>
                             <td><b><%= bath.latitude %></b></td>
@@ -67,45 +67,46 @@
                         <tr>
                             <th><b>Bath ID</b></th>
                             <td><b><%= bath.id %></b></td>
-                        </tr>
+                        </tr>      
 
-
+                        
                         <tr>
                             <th></b><%= link_to "Leave A Review", new_bath_review_path(bath) %></th>
-                            <td><b><%= link_to "View", view_path(bath) %></b></td>
+                            <td><b><%= link_to "View", view_path(bath) %></b></td>                          
                         </tr>
-
+                        
                         <tr>
                             <th><%= link_to "Destroy", bath, method: :delete, data: { confirm: "You sure?" } %></th>
                         </tr>
                     </table>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+                    
+                    
+                    
+                    
+                    
+                    
+            
+            
+                  
+            
+            
+            
+            
+            
+            
+            
+            
+            
         </div>
     </div>
     <% end %>
 
-
-
+    
+    
     <% end %>
+    
 
 
-
-
+    
 <% end %>
+
