--- a/app/views/baths/showsingle.html.erb
+++ b/app/views/baths/showsingle.html.erb
@@ -1,8 +1,8 @@
 <script src="//maps.google.com/maps/api/js?v=3.23&key=AIzaSyD4MhM4eZ3aFFZMEZr34-YyswW6MjvqU6E"></script>
 <script src="//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js"></script>
 <script src='//cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/infobox/src/infobox_packed.js' type='text/javascript'></script> <!-- only if you need custom infoboxes -->
-<br/>
-<table class="table" style="font=size:19px;">
+
+<table class="table">
                         <tr>
                             <th><b>Location</b></th>
                             <td><b><%= @bath.city %>, <%= @bath.address %></b></td>
@@ -14,30 +14,29 @@
 
                             <div class="row">
         <div class="col-md-6 col md-offset-3">
-
-
+            
+                        
       </table>
       </div>
       </div>
-
-
+      
+      
       <center>
       <div style='width: 100%;'>
   <div id="map" style='width: 70%; height: 500px;'></div>
 </div>
 </center>
-
-<p class="title">Reviews</p>
+<h1>Reviews</h1>
 
                     <% @bath.reviews.each do |review| %>
-
-                <table class="table" style="font-size:18px;">
+                
+                <table class="table">
                         <tr>
                             <th><b><%= User.find_by_id(review.user_id).name %> </b> </th>
                             <td><%= review.post %></td>
                         </tr>
                 </table>
-
+                
             <% end %>
         <b><%= link_to "Leave A Review", new_bath_review_path(@bath) %> </b>
 
@@ -70,7 +69,7 @@
 //   info.open(map,marker);
 // });
 
-  myLatLng = new google.maps.LatLng({lat: <%= @bath.latitude %>, lng: <%= @bath.longitude %>});
+  myLatLng = new google.maps.LatLng({lat: <%= @bath.latitude %>, lng: <%= @bath.longitude %>}); 
 
 handler = Gmaps.build('Google');
 handler.buildMap({ provider: {zoom: 16, center: myLatLng}, internal: {id: 'map'}}, function(){
@@ -82,16 +81,18 @@ handler.buildMap({ provider: {zoom: 16, center: myLatLng}, internal: {id: 'map'}
                     "url": "http://megaicons.net/static/img/icons_sizes/105/244/32/toilet-paper-icon.png",
                      "width":  32,
                      "height": 32
-
+              
           },
           "infowindow": "hello!"
       }
       ]);
+  
 
-
-
+  
   handler.bounds.extendWith(markers);
   //handler.fitMapToBounds();
 });
 
 </script>
+      
+     
