--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,14 +1,14 @@
-<p  style="font-size:21px">Forgot your password?</p>
+<h2>Forgot your password?</h2>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= devise_error_messages! %>
 
-  <div class="field" style="font-size:18px">
+  <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true %>
   </div>
 
-  <div class="actions" style="font-size:18px">
+  <div class="actions">
     <%= f.submit "Send me reset password instructions" %>
   </div>
 <% end %>
