--- a/app/views/main/show.html.erb
+++ b/app/views/main/show.html.erb
@@ -1,63 +1,69 @@
-<div class="row">
+<!-- Begin user profile page -->
+
+<div id="motto">
+    <p>Giant tropical centipedes share their territories with tarantulas. Despite it's impressive length, it's a nimble navigator, and some can be highly venomous. As quick as lightning, just like the tarantula it's killing, the centipede has two curved hollow fangs which inject paralyzing venom.
+Even tarantulas aren't immune from an ambush.</p>
+    <p>This centipede is a predator...</p>
+</div>
+
+<div style="width:70%;margin:auto;padding:none">
     <div class="col-md-6 col md-offset-3">
         <h1>Profile</h1>
         <% if current_user.role == "female" || current_user.role == "male" %>
-        <table class="table">
-            <tr>
-                <th>Name</th>
-                <td><%= current_user.name %></td>
-            </tr>
-            <tr>
-                <th>Email</th>
-                <td><%= current_user.email %></td>
-            </tr>
-            <tr>
-                <th>Role</th>
-                <td><%= current_user.role %></td>
-            </tr>
-        </table>
+            <table class="table">
+                <tr>
+                    <th>Name</th>
+                    <td><%= current_user.name %></td>
+                </tr>
+                <tr>
+                    <th>Email</th>
+                    <td><%= current_user.email %></td>
+                </tr>
+                <tr>
+                    <th>Role</th>
+                    <td><%= current_user.role %></td>
+                </tr>
+            </table>
         <% elsif isAdmin? %>
-        <% for user in  @user do%>
-        <% if user == current_user %>
-        <table class="table">
-            <tr>
-                <th><b>Name</b></th>
-                <td><b><%= user.name %></b></td>
-            </tr>
-            <tr>
-                <th><b>Email</b></th>
-                <td><b><%= user.email %></b></td>
-            </tr>
-            <tr>
-                <th><b>Role</b></th>
-                <td><b><%= user.role %></b></td>
-            </tr>
-            
-            <tr>
-                <td><%= link_to 'Destroy', admin_destroy_user_path(user), method: :delete, data: { confirm: 'Are you sure?' } %></td>
-            </tr>
-        </table>
-        <% else %>
-        <table class="table">
-            <tr>
-                <th>Name</th>
-                <td><%= user.name %></td>
-            </tr>
-            <tr>
-                <th>Email</th>
-                <td><%= user.email %></td>
-            </tr>
-            <tr>
-                <th>Role</th>
-                <td><%= user.role %></td>
-            </tr>
-            
-            <tr>
-                <td><%= link_to 'Destroy', admin_destroy_user_path(user), method: :delete, data: { confirm: 'Are you sure?' } %></td>
-            </tr>
-        </table>
-        <% end %>
-        <% end %>
+            <% for user in  @user do%>
+                <% if user == current_user %>
+                    <table class="table">
+                        <tr>
+                            <th><b>Name</b></th>
+                            <td><b><%= user.name %></b></td>
+                        </tr>
+                        <tr>
+                            <th><b>Email</b></th>
+                            <td><b><%= user.email %></b></td>
+                        </tr>
+                        <tr>
+                            <th><b>Role</b></th>
+                            <td><b><%= user.role %></b></td>
+                        </tr>
+                        <tr>
+                            <td><%= link_to 'Destroy', admin_destroy_user_path(user), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+                        </tr>
+                    </table>
+                <% else %>
+                    <table class="table">
+                        <tr>
+                            <th>Name</th>
+                            <td><%= user.name %></td>
+                        </tr>
+                        <tr>
+                            <th>Email</th>
+                            <td><%= user.email %></td>
+                        </tr>
+                        <tr>
+                            <th>Role</th>
+                            <td><%= user.role %></td>
+                        </tr>
+                        <tr>
+                            <td><%= link_to 'Destroy', admin_destroy_user_path(user), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+                        </tr>
+                    </table>
+                <% end %>
+            <% end %>
         <% end %>
         <%= link_to 'Edit your profile', edit_user_registration_path %>
     </div>
