--- a/app/views/main/aboutus.html.erb
+++ b/app/views/main/aboutus.html.erb
@@ -1,33 +1,16 @@
-<style>
-.imgProfile{
-  box-shadow: 4px 4px 2px #888888;
-  float: left;
-  border: 1px solid;
-  margin-right: 20px;
-  clear:both;
-}
+<!-- Begin about us page -->
 
-.borderProfile {
-    margin-left: 0px;
-    overflow:auto;
-    display:block;
-}
-.BorderProfile.clear {
-    clear:both;
-}
+<script>
+var slides = document.querySelectorAll('#slides .slide');
+var currentSlide = 0;
+var slideInterval = setInterval(nextSlide,2000);
 
-
-.nameProfile{
-  font-size: 18px;
-  color:  #000033;
+function nextSlide() {
+	slides[currentSlide].className = "slide";
+	currentSlide = (currentSlide+1)%slides.length;
+	slides[currentSlide].className = 'slide showing';
 }
-
-
-.titleProfile{
-  color:  #00004d;
-  font-size: 16.5px;
-}
-</style>
+</script>
 
 <!--
 IMAGE DIMENSIONS ARE 99px by 99px, or 3.49cm by 3.49cm
@@ -35,6 +18,16 @@ IMAGE DIMENSIONS ARE 99px by 99px, or 3.49cm by 3.49cm
 
 <h1>Meet the Creators</h1>
 <br/>
+
+<!-- Slide show effect -->
+<ul id="slides" style="display: none;">
+	<li class="slide showing">
+       <img src="images/image1.png" alt="FirstImage" id="itemImg" style="max-width:100%; max-height: 100%; float:left; position:relative; text-align:left"> </li>
+	<li class="slide">
+       <img src="images/image2.png" alt="FirstImage" id="itemImg" style="max-width:100%; max-height: 100%; float:left; position:relative; text-align:left"> </li>
+	<li class="slide">
+       <img src="images/image3.png" alt="FirstImage" id="itemImg" style="max-width:100%; max-height: 100%; float:left; position:relative; text-align:left"> </li>
+</ul>
 
 <div class="imgProfile"><%= link_to image_tag('profilePictures/bhatti.png', :size => "99x99") %></div>
   <div class="borderProfile">
