--- a/app/views/main/aboutus.html.erb
+++ b/app/views/main/aboutus.html.erb
@@ -37,13 +37,12 @@ IMAGE DIMENSIONS ARE 99px by 99px, or 3.49cm by 3.49cm
   <p class="nameProfile">Dallan Bhatti</p>
   <p class ="titleProfile">Your Title</p>
   <p>
-    Alex co-founded UrineLuck in 2016. He acts as Senior Vice President and Chief
-    Operating Officer. Before creating UrineLuck, Alex spent several years as an
-    executive consultant advising small & mid-size technology companies and prior
-    to that was Vice President of Corporate Development at Orange. Alex
-    has over 15 years of experience in OEM, strategic alliances, partnering
-    strategy, product management and corporate development—creating and driving
-    strategies to enter new markets and accelerate market share and revenues.
+   Dallan co-founded UrineLuck in 2016. He acts as a loving father, sister, 
+   cousin, singer and songwriter. Before creating UrineLuck, Dallan spent 
+   several years as a Regional Manager at Dunder-Mifflin is Scranton, PA.
+   At Dunder-Mifflin he maintained the highest sales average of any branch 
+   despite weak economy and obselete product. His career goals include 
+   eventually getting back into the paper sales game.
     <br/> <br/>
     Alex holds a PhD in Mathematics from Stanford University and a BA in
     Computer Science from Harvard University.
