--- a/app/views/main/aboutus.html.erb
+++ b/app/views/main/aboutus.html.erb
@@ -88,9 +88,13 @@ IMAGE DIMENSIONS ARE 99px by 99px, or 3.49cm by 3.49cm
     <p class ="titleProfile">Your Title</p>
     <br/>
     <p>
-      Your descripton
+      Dawson is currently a student at Simon Fraser University. When not in school
+      he acts as a professional Super Smash Bros player placing 17th at Paragon LA
+      and 49th at Genesis 3 eliminating Mew2King. Best Smash 4 player in BC ranked first
+      on the BC power rankings.
       <br/> <br/>
-      Your Qualifications.
+      Dawson holds an Associate of Science degree from Langara College and title for
+      world's best King Dedede in Smash 4.
     </p>
     </div>
     <br/>
