--- a/app/views/main/single.html.erb
+++ b/app/views/main/single.html.erb
@@ -27,7 +27,7 @@ handler.buildMap({ provider: {zoom: 16, center: myLatLng}, internal: {id: 'map'}
           "lat": <%= current_user.latitude %>,
           "lng": <%= current_user.longitude %>,
           "picture": {
-                    "url": "http://megaicons.net/static/img/icons_sizes/105/244/32/toilet-paper-icon.png",
+                    "url": "http://iconshow.me/media/images/ui/ios7-icons/png/32/person-outline.png",
                      "width":  32,
                      "height": 32
               
