some more geolocation stuff

--- a/app/views/main/nearme.html.erb
+++ b/app/views/main/nearme.html.erb
@@ -14,7 +14,15 @@
                             <th><b>Rating</b></th>
                             <td><b><%= bath.rating %></b></td>
                         </tr>
+                        <tr>
+                            <th><b>Distance from me</b></th>
+                            <td><b><%= bath.distance_from([current_user.latitude, current_user.longitude]) %> miles away</b></td>
+                        </tr>
+                        
                     </table>
         </div>
     </div>
     <% end %>
+    
+    
+    <!--distance(current_user.longitude, current_user.latitude, bath.longitude, bath.latitude)-->
