--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,5 +30,14 @@
       <%= render 'layouts/footer' %>
 
     <!--</div>-->
+    <script>
+    $('.star-rating').raty({
+      path: '/assets',
+      readOnly: true,
+      score: function () {
+        return $(this).attr('data-score');
+      }
+    });
+    </script>
   </body>
 </html>
