--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,5 +1,10 @@
 <%= form_for [@bath, @review] do |f| %>
-
+    
+    <div class="field">  
+        <%= f.label :rating %><br />
+        <%= f.number_field :rating, value: 1, min: 1, max: 5 %>
+    </div>
+    
     <div class="field">  
         <%= f.label :post %><br />
         <%= f.text_area :post %>
