--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -4,6 +4,7 @@
 
 /* Navigations: find & add */
 #navbox-container {
+  width: 70%;
   margin-left: auto;
 	margin-right: auto;
   background-color: rgba(0, 0, 0, 0.3);
@@ -67,18 +68,16 @@
 
 /* begin slide */
 #slides{
-  float: left;
-  margin: 0px 0px 0px 0px;
+  margin: 0px 50px 5px 50px;
 	position: relative;
-	height: 100%;
-  width: 100%;
+	height: 300px;
+  width: 492px;
 	padding: 0px;
   background-color: #303030;
 	list-style-type: none;
 }
 
 .slide{
-  float: left;
 	position: absolute;
 	left: 0px;
 	top: 0px;
@@ -108,7 +107,6 @@ just for appearance; change whatever you want
 */
 
 .slide{
-  float: left;
 	font-size: 40px;
 	padding: 1px;
 	box-sizing: border-box;
