--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
     <% if user_signed_in? %>
 
       <p>Hello, <%= current_user.name %> - <%= link_to "Sign_out", destroy_user_session_path, :method => 'delete' %></p>
+      
 
     <% end %>
   -->
@@ -29,5 +30,14 @@
       <%= render 'layouts/footer' %>
 
     <!--</div>-->
+    <script>
+    $('.star-rating').raty({
+      path: '/assets',
+      readOnly: true,
+      score: function () {
+        return $(this).attr('data-score');
+      }
+    });
+    </script>
   </body>
 </html>
