--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -155,3 +155,9 @@ button::-moz-focus-inner {
 </div>
 
 -->
+
+<%- unless @lat_lng %>
+        <script type="text/javascript">
+            getGeoLocation();
+        </script>
+<%- end %>
