pushing to heroku

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -97,7 +97,7 @@ button::-moz-focus-inner {
                         <%= link_to 'Request to Add A Bathroom', createbath_path %>
                         <%= link_to 'Your Requested Bathroom', request_path %>
                         <%= link_to "Bathrooms You've added Bathrooms", showbath_path %>
-                        <%= link_to "All Bathrooms (broken link)", showbath_path %>
+                        <%= link_to "All Bathrooms", showbath_path %>
                       </div>
                     </div>
                     </li>
