--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -83,7 +83,8 @@ button::-moz-focus-inner {
                     <div class="dropdown">
                       <button class="dropbtn"> <li><%= link_to 'MAP', showmap_path %> </button>
                       <div class="dropdown-content">
-                        <%= link_to 'Locate Me', single_path %>
+                         <!--alex i put this in because single was deleted-->
+                        <%= link_to 'Locate Me', showmap_path %>
                       </div>
                     </div>
                     </li>
