--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -95,8 +95,13 @@ button::-moz-focus-inner {
                     <div class="dropdown">
                       <button class="dropbtn"> <li><%= link_to 'BATHROOM', newbath_path %> </button>
                       <div class="dropdown-content">
-                        <%= link_to 'Request to Add A Bathroom', createbath_path %>
-                        <%= link_to 'Your Requested Bathroom', request_path %>
+                        <%= if !isAdmin? %>
+                            <%= link_to 'Request to Add A Bathroom', createbath_path %>
+                            <%= link_to 'Your Requested Bathroom', request_path %>
+                        <%= else %>
+                            <%= link_to 'Add A Bathroom', createbath_path %>
+                            <%= link_to 'View Bath Requests', accept_path %>
+                        <% end %>
                         <%= link_to "Bathrooms You've added Bathrooms", showbath_path %>
                         <%= link_to "All Bathrooms", showbath_path %>
                       </div>
