--- a/app/views/baths/showsingle.html.erb
+++ b/app/views/baths/showsingle.html.erb
@@ -2,12 +2,20 @@
 <script src="//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js"></script>
 <script src='//cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/infobox/src/infobox_packed.js' type='text/javascript'></script> <!-- only if you need custom infoboxes -->
 
-<table class="table">
+<style>
+.clear { clear:both; }
+
+
+</style>
+
+<!-- THIS IS THE BREAK POINT  -->
+
+<table class="table" style="width:80%; float:left; margin-right: 5%;">
                         <tr>
                             <th><b>Location</b></th>
                             <td><b><%= @bath.city %>, <%= @bath.address %></b></td>
                         </tr>
-                        
+
                         <tr>
                             <th><b>Average Rating</b></th>
                             <% if @bath.reviews.count != 0 %>
@@ -15,32 +23,83 @@
                             <% else %>
                                 <td>No reviews yet</td>
                             <% end %>
-                                
+
                         </tr>
-                        
+
                         <tr>
                             <th><b>Images</b></th>
                             <td><%= image_tag @bath.image.url(:thumb) %></td>
                         </tr>
+  </table>
 
-                            <div class="row">
-        <div class="col-md-6 col md-offset-3">
-            
-                        
-      </table>
-      </div>
-      </div>
-      
-      
-      <center>
-      <div style='width: 100%;'>
-  <div id="map" style='width: 70%; height: 500px;'></div>
+
+  <img src="images/image1.png" alt="FirstImage"
+  style="max-width:100%; height: 137px; float:left;" </img>
+
+
+
+
+
+
+<!--      <center> -->
+      <div style='width: 100%; height:500px; float:left;'>
+  <div id="map" style='width: 80%; height: 100%; float: left; margin-right: 5%;'></div>
+
+    <table  style='width:15%; float:left; height: 125px; font-size: 14px; margin: 0 0 5% 0'>
+      <tr>
+            <th><b>Mon</b></th>
+            <td> 9:00am - 10:00pm </td>
+      </tr>
+      <tr>
+            <th><b>Tue</b></th>
+            <td> 9:00am - 10:00pm </td>
+      </tr>
+      <tr>
+            <th><b>Wed</b></th>
+            <td> 9:00am - 10:00pm </td>
+      </tr>
+      <tr>
+            <th><b>Thu</b></th>
+            <td> 9:00am - 10:00pm </td>
+      </tr>
+      <tr>
+            <th><b>Fri</b></th>
+            <td> 9:00am - 10:00pm </td>
+      </tr>
+      <tr>
+            <th><b>Sat</b></th>
+            <td> 9:00am - 10:00pm </td>
+      </tr>
+      <tr>
+            <th><b>Sun</b></th>
+            <td> 9:00am - 10:00pm </td>
+      </tr>
+
+
+</table>
+
+<p style='float:left;'>
+  Delivery No </br>
+  Take-out Yes </br>
+  --- </br>
+  Or description </br>
+  --- </br>
+  Or hours </br>
+  if hours, </br>
+  expand or </br>
+  same size
+</p>
+
+
+
 </div>
-</center>
-<h1>Reviews</h1>
+
+<div class="clear"></div>
+<!-- </center> -->
+<h2>Reviews</h2>
 
                     <% @bath.reviews.each do |review| %>
-                
+
                 <table class="table">
                         <tr>
                             <th><b><%= User.find_by_id(review.user_id).name %> </b> </th>
@@ -48,21 +107,21 @@
                         </tr>
                         <tr>
                             <th><b>User Rating</b></th>
-                            
+
                                 <td><span class = "star-rating" data-score=<%= review.rating %></span></td>
 
                         </tr>
-                        
-                        
-                        
+
+
+
                 </table>
-                
+
             <% end %>
         <b><%= link_to "Leave A Review", new_bath_review_path(@bath) %> </b>
 
 <script type="text/javascript">
 
-  myLatLng = new google.maps.LatLng({lat: <%= @bath.latitude %>, lng: <%= @bath.longitude %>}); 
+  myLatLng = new google.maps.LatLng({lat: <%= @bath.latitude %>, lng: <%= @bath.longitude %>});
 
 handler = Gmaps.build('Google');
 handler.buildMap({ provider: {zoom: 16, center: myLatLng}, internal: {id: 'map'}}, function(){
@@ -74,18 +133,16 @@ handler.buildMap({ provider: {zoom: 16, center: myLatLng}, internal: {id: 'map'}
                     "url": "http://megaicons.net/static/img/icons_sizes/105/244/32/toilet-paper-icon.png",
                      "width":  32,
                      "height": 32
-              
+
           },
           "infowindow": "hello!"
       }
       ]);
-  
 
-  
+
+
   handler.bounds.extendWith(markers);
   //handler.fitMapToBounds();
 });
 
 </script>
-      
-     
