--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -8,7 +8,7 @@
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3 well">
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, multipart: true }) do |f| %>
       <%= devise_error_messages! %>
 
       <div class="field">
@@ -38,6 +38,15 @@
       <div class="field">
         <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
         <%= f.password_field :current_password, autocomplete: "off" %>
+      </div>
+      
+      <div class="field">
+          <% if current_user.image == nil %>
+            <%= f.label :image, "Add a Profile Picture" %><br />
+          <% else %>
+            <%= f.label :image, "Change Your Profile Picture" %><br />
+          <% end %>
+          <%= f.file_field :image, autofocus: true %>
       </div>
 
       <div class="actions">
