Slight Modifications to Table Borders

--- a/app/views/baths/new.html.erb
+++ b/app/views/baths/new.html.erb
@@ -1,8 +1,5 @@
-<!-- Begin adding bathroom to database --> 
- 
-<div id="motto">
-    <p>Your contribution will prevent others from boom shakaraka</p>
-</div>
+<!-- Begin adding bathroom to database -->
+
 
 <%= form_for @bath, html: {multipart: true} do |f| %>
 
@@ -19,44 +16,44 @@
 
   <div class="row">
     <div class="col-md-6 col-md-offset-3 well">
-      <div class="field">  
+      <div class="field">
         <%= f.label :country, "Country" %>
         <%= f.select "country", options_for_select(countries_list) %>
       </div>
-    
+
       <div class="field">
           <%= f.label :province, "Province/State" %><br />
           <%= f.select "province", options_for_select(us_states) %>
       </div>
-    
+
       <div class="field">
           <%= f.label :city %><br />
           <%= f.text_field :city, autofocus: true %>
-      </div> 
+      </div>
 
       <div class="field">
           <%= f.label :apartment, "Apartment/Suite number if applicable" %><br />
           <%= f.text_field :apartment, autofocus: true %>
       </div>
-    
+
       <div class="field">
           <%= f.label :address %><br />
           <%= f.text_field :address, autofocus: true %>
       </div>
-      
+
       <div class="field">
           <%= f.label :image %><br />
           <%= f.file_field :image, autofocus: true %>
       </div>
 
-  
-  <% if isAdmin? %>  
-    <%= f.submit "Create my bathroom", class: "btn btn-primary" %>
+
+  <% if isAdmin? %>
+    <%= f.submit "Create my bathroom", class: "btn btn-default" %>
   <% else %>
-    <%= f.submit "Send bathroom request", class: "btn btn-primary" %>
+    <%= f.submit "Send bathroom request", class: "btn btn-default" %>
   <% end %>
 
     </div>
   </div>
-  
+
 <% end %>
