--- a/app/views/baths/requests.html.erb
+++ b/app/views/baths/requests.html.erb
@@ -1,9 +1,9 @@
 <h1>Bathrooms that you have requested to add</h1>
 
-<% @baths.each do |bath| %> 
-        <div class="row">
-            <div class="col-md-6 col md-offset-3">
-                
+<% @baths.each do |bath| %>
+        <div class="row" style="width:50%;">
+            <div class="col-md-6 col md-offset-3" style="min-width: 450px;">
+
             <table class="table">
                         <tr>
                             <th><b>Address</b></th>
@@ -21,17 +21,17 @@
                             <th><b>Country</b></th>
                             <td><b><%= bath.country %></b></td>
                         </tr>
-                        
+
                         <tr>
                             <th><b>Longitude</b></th>
                             <td><b><%= bath.longitude %></b></td>
                         </tr>
-                        
+
                         <tr>
                             <th><b>Latitude</b></th>
                             <td><b><%= bath.latitude %></b></td>
                         </tr>
-                        
+
                         <tr>
                             <th><b>Status</b></th>
                             <% if bath.admin_accept == true %>
@@ -40,10 +40,10 @@
                                 <td><b><font color="red">Pending</font></b></td>
                             <% end %>
                         </tr>
-                        
 
-            </table>    
-                
+
+            </table>
+
             </div>
         </div>
 <% end %>
