--- a/app/views/baths/show.html.erb
+++ b/app/views/baths/show.html.erb
@@ -4,9 +4,9 @@
 
 <% if current_user.role == "female" || current_user.role == "male" %>
     <h1>These are the bathrooms you have added</h1>
-    
-    <div class="row">
-        <div class="col-md-6 col md-offset-3">
+
+    <div class="row" style="width:50%;">
+        <div class="col-md-6 col md-offset-3" style="min-width: 450px;">
             <% @baths.each do |bath| %>
                     <% if bath.admin_accept == true %>
                     <table class="table">
@@ -15,31 +15,31 @@
                             <td><b><%= bath.city %>, <%= bath.address %></b></td>
                         </tr>
 
-                        <tr>
-                            <th></b><%= link_to "Leave A Review", new_bath_review_path(bath) %></th>
-                            <td><b><%= link_to "View", view_path(bath) %></b></td>                      
+                        <tr style="border-bottom: 1px solid #fff">
+                            <td colspan="2">
+                            <div style="text-alighn:left; width:30%; float: left;"><%= link_to " Review ", new_bath_review_path(bath) %></div>
+                            <div style="text-align:right; width:30%; float: left;"><%= link_to " View ", view_path(bath) %></div>
+                            </td>
                         </tr>
-                        
-                        
+
+
                     </table>
 
-                    
-                    
+
+
                     <% end %>
             <% end %>
-            
+
         </div>
     </div>
-    
-    
+
+
 <% elsif isAdmin? %>
     <h1>These are the bathrooms in the database</h1>
     <% @baths.each do |bath| %>
     <% if bath.admin_accept == true %>
-    <div class="row">
-        <div class="col-md-6 col md-offset-3">
-            
-            
+    <div class="row" style="width:50%;">
+        <div class="col-md-6 col md-offset-3" style="min-width: 450px;">
                     <table class="table">
                         <tr>
                             <th><b>Location</b></th>
@@ -49,7 +49,7 @@
                             <th><b>Longitude</b></th>
                             <td><b><%= bath.longitude %></b></td>
                         </tr>
-                        
+
                         <tr>
                             <th><b>Latitude</b></th>
                             <td><b><%= bath.latitude %></b></td>
@@ -57,46 +57,44 @@
                         <tr>
                             <th><b>Bath ID</b></th>
                             <td><b><%= bath.id %></b></td>
-                        </tr>      
+                        </tr>
+                        <tr style="border-bottom: 1px solid #fff">
+                            <td colspan="2">
+                            <div style="text-alighn:left; width:30%; float: left;"><%= link_to " Review ", new_bath_review_path(bath) %></div>
+                            <div style="text-align:center; width:30%; float: left;"><%= link_to " Destroy ", bath, method: :delete, data: { confirm: "You sure?" } %></div>
+                            <div style="text-align:right; width:30%; float: left;"><%= link_to " View ", view_path(bath) %></div>
+                            </td>
+                        </tr>
 
-                        
-                        <tr>
-                            <th></b><%= link_to "Leave A Review", new_bath_review_path(bath) %></th>
-                            <td><b><%= link_to "View", view_path(bath) %></b></td>                          
-                        </tr>
-                        
-                        <tr>
-                            <th><%= link_to "Destroy", bath, method: :delete, data: { confirm: "You sure?" } %></th>
-                        </tr>
                     </table>
-                    
-                    
-                    
-                    
-                    
-                    
-            
-            
-                  
-            
-            
-            
-            
-            
-            
-            
-            
-            
+                    <div class="clear"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
         </div>
     </div>
     <% end %>
 
-    
-    
+
+
     <% end %>
-    
 
 
-    
+
+
 <% end %>
-
