--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -34,12 +34,7 @@
 .dropdown:hover .dropbtn {
       border: none;
 }
-button::-moz-focus-inner {
-    border:0;
-    padding:0;
-    margin-top:-2px;
-    	margin-bottom: -2px;
-}
+
 </style>
 
 
@@ -163,6 +158,9 @@ button::-moz-focus-inner {
 </div>
 
 -->
+
+<div class="clear"></div>
+
 
 <%- unless @lat_lng %>
         <script type="text/javascript">
